# sweepr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sweepr/: __init__.py  cli.py  core.py
tests/: test_sweepr.py
